# postars

./: .env.example  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.prediction  Dockerfile.server  Makefile.toml  README.md
api/: Cargo.toml
api/src/: email.rs  lib.rs
client/: .babelrc  .eslintrc.cjs  index.html  package.json  vite.config.js
client/src/: App.css  App.jsx  Shared.module.css  main.jsx  theme.css
client/src/components/: Button.jsx  Menu.jsx  Menu.module.css  MicrosoftAuthButton.jsx  ProtectedRoute.jsx  ToggleSwitch.css  ToggleSwitch.jsx
client/src/components/Email/: Actions.css  Actions.jsx  Body.jsx  Email.css  Email.jsx  EmptyState.jsx  EmptyState.module.css  Header.jsx
client/src/components/Mailbox/: EmailListItem.jsx  EmailListItem.module.css  EmptyState.jsx  EmptyState.module.css  LoadingSpinner.css  Mailbox.css  Mailbox.jsx
client/src/components/Sidebar/: Sidebar.jsx  Sidebar.module.css
client/src/config/: folders.js
client/src/hooks/: api.js  useEmailActions.js  useEmails.js  useProfile.js  useSearchEmails.js
client/src/pages/: Home.jsx  Login.jsx  Login.module.css  Main.jsx  Profile.jsx  Profile.module.css
client/src/state/: AppState.jsx
himalaya-lib/: CHANGELOG.md
himalaya-lib/src/: lib.rs
himalaya-lib/src/backend/: backend.rs
himalaya-lib/src/backend/imap/: backend.rs
himalaya-lib/src/backend/maildir/: backend.rs
himalaya-lib/src/backend/notmuch/: backend.rs
himalaya-lib/src/domain/email/: email.rs
himalaya-lib/src/domain/envelope/imap/: envelope.rs
himalaya-lib/src/domain/envelope/notmuch/: envelope.rs
himalaya-lib/src/domain/envelope/sync/: sync.rs
himalaya-lib/src/domain/flag/maildir/: flag.rs
himalaya-lib/src/domain/folder/sync/: sync.rs
himalaya-lib/tests/: test_imap_backend.rs  test_maildir_backend.rs  test_smtp_sender.rs  test_sync.rs
migrations/: V1__create_users_table.sql  V2__create_tokens_table.sql
postgres_queue/src/: lib.rs
prediction/: encrypt_decrypt.py  predict_api.py  requirements.txt  spam_classifier_model.pkl  vectorizer.pkl
public/: index.html
public/assets/: index-026d18b1.css  index-40e3c273.js  index-4768ca60.css  index-9035d5ac.js  index-b505a23c.js  index-ce0ba77f.css  index-cff0a126.js
server/: .gitignore  Cargo.toml  README.md
server/public/: email-styles.css
server/public/assets/: index-d7829431.js
server/src/: auth.rs
server/src/api/: error.rs
server/src/fixtures/: empty-subject.json
src/: auth.rs  database.rs  graph.rs  main.rs  process.rs  token.rs
src/api/: email.rs  error.rs  mod.rs
src/backend/: backend.rs
src/backend/imap/: backend.rs  config.rs
src/backend/maildir/: backend.rs
src/domain/account/: config.rs
src/domain/envelope/maildir/: envelope.rs
src/domain/flag/maildir/: flags.rs
src/domain/folder/sync/: cache.rs
src/fixtures/: broken-sender.json  no-sender-no-from.json
src/index/: mod.rs
tests/: test_imap_backend.rs  test_maildir_backend.rs  test_sync.rs
