[package]
edition = "2021"
name = "postars"
version = "0.1.0"

[workspace]
members = ['api']

[dependencies]
anyhow = "1.0.69"
api = {path = "api"}
axum-error = "0.2.0"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.1.8", features = ["derive"] }
confy = "0.5.1"
dotenvy = "0.15.6"
oauth2 = "4.3.0"
opener = "0.5.2"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["preserve_order"] }
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
url = "2.3.1"
