[package]
edition = "2021"
name = "postrs"
version = "0.1.0"

[dependencies]
anyhow = "1.0.69"
async-compat = "0.2.1"
axum = {version = "0.6.10", features = ["macros", "headers", "query"]}
axum-error = "0.2.0"
axum-extra = {version = "0.5", features = ["spa"]}
base64 = "0.13"
bitflags = {version = "2.0.0", features = ["serde"]}
chrono = {version = "0.4.24", features = ["serde"]}
clap = {version = "4.1.8", features = ["derive", "env"]}
confy = "0.5.1"
deadpool-postgres = {version = "0.10.5", features = ["serde"]}
dotenvy = "0.15.6"
eyre = "0.6.8"
fehler = "1.0.0"
futures = "0.3.27"
jsonwebtoken = "8.3.0"
meilisearch-sdk = "0.22.1"
oauth2 = "4.3.0"
opener = "0.5.2"
postgres_queue = {path = "postgres_queue"}
refinery = {version = "0.8", features = ["tokio-postgres"]}
reqwest = {version = "0.11.15", features = ["json"]}
serde = {version = "1.0.155", features = ["derive"]}
serde_json = {version = "1.0.94", features = ["preserve_order"]}
sha2 = "0.9"
thiserror = "1.0.39"
tokio = {version = "1.26.0", features = ["full"]}
tokio-postgres = "0.7.7"
tower = "0.4.13"
tower-http = {version = "0.4.0", features = ["trace", "cors"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
url = "2.3.1"
