[package]
edition = "2021"
name = "api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
axum = {version = "0.6.10", features = ["macros"]}
axum-error = "0.2.0"
chrono = { version = "0.4.24", features = ["serde"] }
eyre = "0.6.8"
fehler = "1.0.0"
himalaya-lib = {path = "../himalaya-lib"}
serde = "1.0.155"
serde_json = "1.0.94"
tokio = {version = "1.26.0", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
